--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "4.3.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "typescript": "5.2.2",
     "vite": "4.4.9",
     "vue-tsc": "1.8.8"
