--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "sass": "^1.66.1",
     "vue": "3.3.4",
     "vue-router": "4.2.4"
   },
